Unify HTML element style

--- a/lib/src/tabs/tabs.html
+++ b/lib/src/tabs/tabs.html
@@ -3,9 +3,9 @@
 <link rel="stylesheet" href="tabs.css">
 
 <div data-tabs role="tablist" aria-label="Sample tabs">
-    <input id="tab1" type="radio" name="tab" data-tab role="tab" aria-controls="tab-panel1" checked="checked"/>
-    <input id="tab2" type="radio" name="tab" data-tab role="tab" aria-controls="tab-panel2"/>
-    <input id="tab3" type="radio" name="tab" data-tab role="tab" aria-controls="tab-panel3"/>
+    <input id="tab1" type="radio" name="tab" data-tab role="tab" aria-controls="tab-panel1" checked="checked">
+    <input id="tab2" type="radio" name="tab" data-tab role="tab" aria-controls="tab-panel2">
+    <input id="tab3" type="radio" name="tab" data-tab role="tab" aria-controls="tab-panel3">
     <nav>
         <label for="tab1" data-tab-label>First Tab</label>
         <label for="tab2" data-tab-label>Second Tab</label>
